assignment 10 lesson 6 LS202 finished files

--- a/ls202/lesson6/assignment10_flex_walk_through/flex.css
+++ b/ls202/lesson6/assignment10_flex_walk_through/flex.css
@@ -1,8 +1,21 @@
+/*
+** This completed CSS file includes additional color and background-color
+** properties with an `inherit` value. These satisfy one of the W3C warnings
+** and aren't generally important except as documentation.
+*/
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html {
+  background-color: white;
+  color: black;
   font: normal 24px Helvetica, Arial, sans-serif;
 }
 
-h1 {
+header, h1 {
   background-color: blue;
   color: white;
 }
@@ -14,9 +27,12 @@ header {
 
 nav {
   background-color: cyan;
+  color: inherit; /* no text - doesn't matter */
 }
 
 ul {
+  display: flex;
+  justify-content: space-around;
   list-style-type: none;
 }
 
@@ -39,13 +55,23 @@ a:hover {
   color: yellow;
 }
 
+main {
+  display: flex;
+}
+
 article,
 aside {
   padding: 0 1rem;
 }
 
+article {
+  flex: 2;
+}
+
 aside {
   background-color: lightgreen;
+  color: inherit; /* black */
+  flex: 1;
 }
 
 p {
@@ -53,7 +79,12 @@ p {
 }
 
 footer {
+  align-items: center;
   background-color: yellow;
+  color: inherit; /* black */
+  display: flex;
+  flex-flow: row-reverse;
+  justify-content: space-between;
 }
 
 #copyright {
@@ -62,4 +93,10 @@ footer {
 
 #logo {
   background-color: orange;
+  color: inherit; /* no text - doesn't matter */
+}
+
+img {
+  display: block;
+  height: 200px;
 }
