--- a/ls202/lesson6/assignment10-grid/grid.css
+++ b/ls202/lesson6/assignment10-grid/grid.css
@@ -74,11 +74,15 @@ footer {
 
 /* MY ADDITIONAL CSS */
 
+/* Nav Section */
+
 nav > ul {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   margin: 0;
 }
+
+/* Main Section */
 
 main {
   display: grid;
@@ -86,25 +90,51 @@ main {
 }
 
 #article-1 {
-  /* order: 1; */
   grid-row: 1 ;
   grid-column: 2 / 4;
 }
 
 #article-2 {
-  /* order: 4; */
+  grid-row: 2;
+  grid-column: 2 / 5;
 }
 
 #aside-1 {
-  /* order: 0; */
-  grid-row: 0 / 1;
-  grid-column: 0;
+  grid-row: 1 / 2;
+  grid-column: 1;
 }
 
 #aside-2 {
-  /* order: 2; */
+  grid-row: 1;
+  grid-column: 4;
 }
 
 #aside-3 {
-  /* order: 3; */
+  grid-row: 2;
+  grid-column: 1;
+}
+
+/* Footer Section */
+
+footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+#copyright {
+  grid-row: 1;
+  grid-column: 2 / 5;
+  text-align: right;
+  align-content: center;
+}
+
+#logo {
+  grid-row: 1;
+  grid-column: 1 / 2;
+}
+
+img {
+  /* Necessary to fill up entire height and width of enclosing div element */
+  width: 100%;
+  height: 100%;
 }
