--- a/ls202/lesson7/assignment8_lesson7_spacedesign_company_site/main.css
+++ b/ls202/lesson7/assignment8_lesson7_spacedesign_company_site/main.css
@@ -6,7 +6,7 @@ body {
 }
 
 .width-container {
-  max-width: 850px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
@@ -25,7 +25,7 @@ nav {
   margin-block-start: 7rem;
   margin-inline: auto;
   text-align: center;
-  width: 55%;
+  width: 43%;
   display: flex;
   justify-content: space-between;
 }
@@ -61,7 +61,7 @@ section:last-child {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-inline: 3rem;
+  margin-inline: 8rem;
   height: 500px;
 }
 
@@ -73,13 +73,20 @@ footer {
 
 .footer-container {
   margin: 0 auto;
-  max-width: 550px;
-  width: 50%;
+  max-width: 750px;
+  /* width: 75%; */
 }
 
 .footer-icon-flexbox {
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  width: 75%;
+}
+
+.project-image {
+  display: block;
+  padding-block: 1.75rem;
 }
 
 /* TYPOGRAPHY */
@@ -100,7 +107,7 @@ h3 {
 }
 
 p {
-  padding-inline: 1.5rem;
+  padding-inline: 6rem;
   color: #45494D;
   font-size: 1.25rem;
   font-weight: 600;
